<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <LinearLayout
        style="@style/card"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="@dimen/imageWidth"
            android:layout_height="@dimen/imageHeight"
            android:src="@drawable/human"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:text="@string/name"
            style="@style/textView.Name"
            android:layout_marginBottom="@dimen/distanceBetweenTwoConvigent" />
        
        <TextView
            android:text="@string/position"
            style="@style/textView.Details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distanceBetweenNotTwoConvigent"
            android:orientation="horizontal">

            <TextView
                android:text="@string/telephone"
                style="@style/textView.Details.InLinearLayout.ByDrawable"
                android:drawableStart="@drawable/baseline_phone_24"/>

            <TextView
                android:text="@string/telephone_number"
                style="@style/textView.Details.InLinearLayout.NotByDrawable" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distanceBetweenTwoConvigent"
            android:orientation="horizontal">

            <TextView
                android:text="@string/email"
                style="@style/textView.Details.InLinearLayout.ByDrawable"
                android:drawableStart="@drawable/baseline_email_24" />

            <TextView
                android:text="@string/email_characters"
                style="@style/textView.Details.InLinearLayout.NotByDrawable" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/card">

        <TextView
            style="@style/textView.Name"
            android:text="@string/company_details"
            android:layout_marginBottom="12dp" />

        <TextView
            style="@style/textView.Details.InLinearLayout.ByDrawable"
            android:text="@string/email_home"
            android:drawableStart="@drawable/baseline_home_24"
            android:layout_marginStart="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/employees"
                android:textStyle="bold"
                style="@style/textView.Details.InLinearLayout.ByDrawable"
                android:drawableStart="@drawable/baseline_people_24"/>

            <TextView
                android:text="@string/employees_count"
                style="@style/textView.Details.InLinearLayout.NotByDrawable" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/location"
                android:textStyle="bold"
                style="@style/textView.Details.InLinearLayout.ByDrawable"
                android:drawableStart="@drawable/baseline_location_on_24"/>

            <TextView
                android:text="@string/location_sentence"
                style="@style/textView.Details.InLinearLayout.NotByDrawable" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/note"
                android:textStyle="bold"
                style="@style/textView.Details.InLinearLayout.ByDrawable" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_sentence"
                android:textSize="@dimen/details"
                android:textColor="@color/black"
                android:padding="4dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>